# IN3110_Project2

./: README.md  pyproject.toml  timing-report.txt
instapy/: cli.py  io.py  numba_filters.py  numpy_filters.py  python_filters.py  timing.py
instapy.egg-info/: PKG-INFO  requires.txt
test/: test_cython.py  test_numba.py  test_numpy.py  test_python.py
